fix sidebar height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,8 @@ div {
  }
 
 #logo {
-  width: 45px;
-  height: 45px;
+  width: 60px;
+  height: 60px;
   opacity: 0.9;
 }
 
