--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,7 +30,7 @@
   .sidebar {
     display: block;
     width: 80vw;
-    height: 100%;
+    height: 120%;
     position: fixed;
     z-index: 2;
     background: #131313;
